task-manager: use all available data about memory of processes

Even if the global dump's successs if false (which may happen if a child process is
stuck, times out, disconnects or crashes) data about the other processes
is still valid and can be displayed.

Change the code to check if the dump is not null rather than checking
for global success.

Bug: 799537
Change-Id: I9686b304e493529b13b2839e0cabb742e2d6280f